fixtures/corpus/invalid/ws-bad-topic.rune
[MOD] chat

[ENT:ws] chat @ /rooms/{room}
    notavalidtopic
